crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_declarations__forward_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/function_declarations.rs
assertion_line: 6
expression: "goto_definition(r#\"\n%! main.sp\nforward int Foo(int bar);\n             |\n             ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 12
      },
      "end": {
        "line": 0,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 25
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 12
      },
      "end": {
        "line": 0,
        "character": 15
      }
    }
  }
]
