crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_declarations__native_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/function_declarations.rs
assertion_line: 42
expression: "goto_definition(r#\"\n%! main.sp\nnative int Foo(int bar);\n                     |\n                     ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 19
      },
      "end": {
        "line": 0,
        "character": 22
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 15
      },
      "end": {
        "line": 0,
        "character": 22
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 19
      },
      "end": {
        "line": 0,
        "character": 22
      }
    }
  }
]
